force-app/main/default/objects/AgileEpic__c/AgileEpic__c.object-meta.xml
<CustomObject>
    <label>Épica</label>
    <nameField>
        <label>Nome de Épica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Épicas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>