force-app/main/default/objects/AgileEpic__c/fields/AggregatedEpic__c.field-meta.xml
<CustomField>
    <fullName>AggregatedEpic__c</fullName>
    <inlineHelpText>Quando o mesmo épico for trabalhado por mais de uma Squad, utilize este campo para Relatórios. Ex.: &quot;SQ1: Visão 360&quot; e &quot;SQ2: Visão 360&quot; preencha aqui com &quot;Visão 360&quot;</inlineHelpText>
    <label>Épico Geral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>