force-app/main/default/objects/AgileEpic__c/fields/Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Artifacts__c</fullName>
    <description>Campo utilizado para armazenar os artefatos enviados pelo cliente.</description>
    <inlineHelpText>Campo utilizado para armazenar os artefatos enviados pelo cliente.</inlineHelpText>
    <label>Artefatos</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>