force-app/main/default/objects/AgileEpic__c/fields/Backlog1__c.field-meta.xml
<CustomField>
    <fullName>Backlog1__c</fullName>
    <label>Backlog %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>