force-app/main/default/objects/AgileEpic__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Desalocada, Nova</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>