force-app/main/default/objects/AgileEpic__c/fields/BacklogPercentage__c.field-meta.xml
<CustomField>
    <fullName>BacklogPercentage__c</fullName>
    <formula>(Backlog__c / WorksTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>