force-app/main/default/objects/AgileEpic__c/fields/BaPoints__c.field-meta.xml
<CustomField>
    <fullName>BaPoints__c</fullName>
    <label># Pontos BA</label>
    <summarizedField>AgileWork__c.BaPoints__c</summarizedField>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>