force-app/main/default/objects/AgileEpic__c/fields/CanceledWorks__c.field-meta.xml
<CustomField>
    <fullName>CanceledWorks__c</fullName>
    <label>Works Canceladas</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelada</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>