force-app/main/default/objects/AgileEpic__c/fields/CloudList__c.field-meta.xml
<CustomField>
    <fullName>CloudList__c</fullName>
    <label>Núvem.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
            <value>
                <fullName>Digital Engagement</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>App Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>