force-app/main/default/objects/AgileEpic__c/fields/DevPoints__c.field-meta.xml
<CustomField>
    <fullName>DevPoints__c</fullName>
    <label># Pontos Dev</label>
    <summarizedField>AgileWork__c.DevPoints__c</summarizedField>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>