force-app/main/default/objects/AgileEpic__c/fields/Finished1__c.field-meta.xml
<CustomField>
    <fullName>Finished1__c</fullName>
    <label>Finalizadas %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>