force-app/main/default/objects/AgileEpic__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <label>Finalizadas</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Aprovada, Aprovada tecnicamente, Sprint Backlog, Aguardando Informações, Em Andamento, Em Testes Interno, Liberado para Validação, Encerrada, Cancelada</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>