force-app/main/default/objects/AgileEpic__c/fields/FinishedPercentage__c.field-meta.xml
<CustomField>
    <fullName>FinishedPercentage__c</fullName>
    <formula>(Finished__c / WorksTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Finalizadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>