force-app/main/default/objects/AgileEpic__c/fields/InApproval1__c.field-meta.xml
<CustomField>
    <fullName>InApproval1__c</fullName>
    <label>Em aprovação %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>