force-app/main/default/objects/AgileEpic__c/fields/InApproval__c.field-meta.xml
<CustomField>
    <fullName>InApproval__c</fullName>
    <label>Em aprovação</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Em Aprovação</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>