force-app/main/default/objects/AgileEpic__c/fields/InApprovalPercentage__c.field-meta.xml
<CustomField>
    <fullName>InApprovalPercentage__c</fullName>
    <formula>(InApproval__c /  WorksTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Em aprovação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>