force-app/main/default/objects/AgileEpic__c/fields/InLifting1__c.field-meta.xml
<CustomField>
    <fullName>InLifting1__c</fullName>
    <label>Em levantamento %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>