force-app/main/default/objects/AgileEpic__c/fields/InLifting__c.field-meta.xml
<CustomField>
    <fullName>InLifting__c</fullName>
    <label>Em levantamento</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Em Levantamento, Em Escrita, Em validação interna, Liberado para o Arquiteto, Revisão Arquiteto</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>