force-app/main/default/objects/AgileEpic__c/fields/InLiftingPercentage__c.field-meta.xml
<CustomField>
    <fullName>InLiftingPercentage__c</fullName>
    <formula>(InLifting__c /  WorksTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Em Levantamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>