force-app/main/default/objects/AgileEpic__c/fields/LiftingStatus__c.field-meta.xml
<CustomField>
    <fullName>LiftingStatus__c</fullName>
    <formula>IF(
    AND(Backlog__c = 0, InLifting__c = 0, InApproval__c = 0, Finished__c = 0),
    &quot;Não iniciado&quot;,
    IF(
        AND(Backlog__c &gt; 0, InLifting__c = 0, InApproval__c = 0, Finished__c = 0),
        &quot;Discutida&quot;,
        IF(
            AND(Finished__c &gt; 0, Backlog__c = 0, InLifting__c = 0, InApproval__c = 0),
            &quot;Concluído&quot;,
            &quot;Em levantamento&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Levantamento</label>
    <type>Text</type>
</CustomField>