force-app/main/default/objects/AgileEpic__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release</label>
    <referenceTo>AgileRelease__c</referenceTo>
    <relationshipLabel>Épicos</relationshipLabel>
    <relationshipName>epicos</relationshipName>
    <type>Lookup</type>
</CustomField>