force-app/main/default/objects/AgileEpic__c/fields/RemainingBaPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingBaPoints__c</fullName>
    <label># Pontos Restantes BA</label>
    <summarizedField>AgileWork__c.RemainingBaPoints__c</summarizedField>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>