force-app/main/default/objects/AgileEpic__c/fields/RemainingDevPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingDevPoints__c</fullName>
    <label># Pontos Restantes Dev</label>
    <summarizedField>AgileWork__c.RemainingDevPoints__c</summarizedField>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>