force-app/main/default/objects/AgileEpic__c/fields/RemainingTotalPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingTotalPoints__c</fullName>
    <formula>RemainingBaPoints__c  + RemainingDevPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pontos Restantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>