force-app/main/default/objects/AgileEpic__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciado</fullName>
                <default>true</default>
                <label>Não iniciado</label>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Liberado para Validação</fullName>
            </value>
            <value>
                <fullName>Em Validação</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
                <isActive>false</isActive>
                <label>Cancelada</label>
            </value>
            <value>
                <fullName>Encerrada</fullName>
                <isActive>false</isActive>
                <label>Encerrada</label>
            </value>
            <value>
                <fullName>Não iniciada</fullName>
                <isActive>false</isActive>
                <label>Não iniciada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>