force-app/main/default/objects/AgileEpic__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Time</label>
    <referenceTo>AgileTeam__c</referenceTo>
    <relationshipLabel>Épicas</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>