force-app/main/default/objects/AgileEpic__c/fields/TotalPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalPoints__c</fullName>
    <formula>DevPoints__c + BaPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pontos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>