force-app/main/default/objects/AgileEpic__c/fields/WorksClosed__c.field-meta.xml
<CustomField>
    <fullName>WorksClosed__c</fullName>
    <label>Works Encerradas</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Encerrada</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>