force-app/main/default/objects/AgileEpic__c/fields/WorksReleasedValidation__c.field-meta.xml
<CustomField>
    <fullName>WorksReleasedValidation__c</fullName>
    <label>Works Liberadas ao PO</label>
    <summaryFilterItems>
        <field>AgileWork__c.Status__c</field>
        <operation>equals</operation>
        <value>Liberado para Validação, Liberado para PO</value>
    </summaryFilterItems>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>