force-app/main/default/objects/AgileEpic__c/fields/WorksTotal__c.field-meta.xml
<CustomField>
    <fullName>WorksTotal__c</fullName>
    <label>Total de Works</label>
    <summaryForeignKey>AgileWork__c.AgileEpic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>