force-app/main/default/objects/AgileEpic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AggregatedEpic__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Team__c</columns>
    <columns>Status__c</columns>
    <columns>TotalPoints__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>