force-app/main/default/objects/AgileEpic__c/listViews/Epico_x_Works.listView-meta.xml
<ListView>
    <fullName>Epico_x_Works</fullName>
    <columns>NAME</columns>
    <columns>Backlog__c</columns>
    <columns>InLifting__c</columns>
    <columns>InApproval__c</columns>
    <columns>Finished__c</columns>
    <columns>WorksInternalTest__c</columns>
    <columns>WorksReleasedValidation__c</columns>
    <columns>WorksClosed__c</columns>
    <columns>CanceledWorks__c</columns>
    <columns>WorksTotal__c</columns>
    <columns>CloudList__c</columns>
    <columns>LiftingStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>Epico x Works</label>
</ListView>