force-app/main/default/objects/AgileEpic__c/listViews/Epicos_Squad_3.listView-meta.xml
<ListView>
    <fullName>Epicos_Squad_3</fullName>
    <columns>NAME</columns>
    <columns>AggregatedEpic__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Team__c</columns>
    <columns>Status__c</columns>
    <columns>TotalPoints__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Squad 3</value>
    </filters>
    <label>Épicos Squad 3</label>
</ListView>