force-app/main/default/objects/AgileEpic__c/listViews/picos_Squad_1.listView-meta.xml
<ListView>
    <fullName>picos_Squad_1</fullName>
    <columns>NAME</columns>
    <columns>AggregatedEpic__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Team__c</columns>
    <columns>Status__c</columns>
    <columns>TotalPoints__c</columns>
    <columns>WorksTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Squad 1</value>
    </filters>
    <label>Épicos Squad 1</label>
</ListView>